<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="txa_app_name">TXA Notification Test</string>
    <string name="txa_send_notification">Send Test Notification</string>
    <string name="txa_notification_title">Test Notification</string>
    <string name="txa_notification_content">This is a test notification with custom ringtone</string>
    <string name="txa_settings">Settings</string>
    <string name="txa_language">Language</string>
    <string name="txa_language_vietnamese">Tiếng Việt</string>
    <string name="txa_language_english">English</string>
    <string name="txa_install_ringtones">Install Ringtones</string>
    <string name="txa_ringtone_installed">Ringtones installed successfully!</string>
    <string name="txa_ringtone_install_failed">Failed to install ringtones</string>
    <string name="txa_notification_sent">Notification sent!</string>
    <string name="txa_select_ringtone">Select Ringtone</string>
    <string name="txa_ringtone_chuong">Chuong</string>
    <string name="txa_ringtone_onlol">Onlol</string>
    <string name="txa_default_ringtone">Default System Ringtone</string>
</resources>

